styles/style.css
/* ... */
.menu__list p {
  text-align: left;
  line-height: 0.8rem;
}

.menu__list li i {
  position: absolute;
  left: -20%;
  top: 10%;
}

.about,
.about article {
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.about {
  padding: 10%;
  padding-top: 20%;
  margin: 7.5% 0;
}

.about .image__container {
  width: 40%;
  margin-bottom: 2.5%;
  position: relative;
}

.circle__logo {
  position: absolute;
  right: -12.5%;
  top: -25%;
  max-height: 50%;
}

.about .underline__container {
  padding-bottom: 2.5%;
}

p.underline.restaurant__underline {
  width: 20%;
}

.about article p {
  width: 60%;
  margin-bottom: 5%;
}

.gallery {
  max-height: 575px;
}

.gallery__images {
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  padding: 0;
  margin: 0;
}

.gallery__images li {
  width: Calc(100%/3);
}

.testimony {
  background-color: #d9e695;
  margin: 0;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 10% 25%;
}

.testimony p {
  color: #333333;
  font-family: 'Lora';
  font-style: italic;
  font-size: 0.8rem;
}

h2 {
  margin: 0 auto;
}

.quote__container {
  position: relative;
}

.quote__container .quotation__mark__left,
.quote__container .quotation__mark__right {
  position: absolute;
  font-size: 4rem;
  color: #F6F6F6;
  margin: 0;
}

.quote__container .quotation__mark__left {
  top: 20%;
  left: -10%;
}

.quote__container .quotation__mark__right {
  bottom: 0;
  right: -10%;
}

.arrow__container {
  width: 10%;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.arrow__container .arrow__left {
  color: #c5c7ab;
  font-size: 1.5rem;
}

.arrow__container .arrow__right {
  color: #F6F6F6;
  font-size: 1.5rem;
}

.wrapper__blog {
  width: 80%;
  margin: 0 auto;
}

section.blogger,
.blogger .text__container.text__container,
.flex__parent__container,
.flex__parent__post,
.comment,
form,
.blog__form__flex__parent {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.blog p {
  color: #333333;
}

.blog__details,
.pineapple__chicken p {
  text-align: left;
  margin: 2% 0;
  font-size: 0.7rem;
}

p.blog__details {
  color: #2E2E2E;
  line-height: 0.75rem;
  margin-bottom: 2.5%;
}

.pineapple__chicken h2 {
  line-height: 1.5rem;
  margin-top: 10%;
}

section.blog {
  border-bottom: 1px solid #e0e0e0;
  margin: 5% 0 0;
  padding-bottom: 2.5%;
}

.tags {
  color: #999999;
  font-family: 'Lora';
  font-size: 0.6rem;
  font-weight: 400;
}

.share i {
  color: #999999;
  padding: 0 1%;
}

.tags__social h3 {
  margin-bottom: 2.5%;
}

section.blogger {
  padding-bottom: 5%;
}

section.blogger .image__container {
  width: 30%;
}

section.blogger .text__container {
  width: 90%;
  background-color: #f0f0f0;
  padding-left: 5%;
}

.blogger .text__container {
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.blogger .text__container p {
  text-align: left;
}

.flex__parent__container {
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.flex__parent__post {
  width: calc(95% / 3);
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.related__posts .text__container {
  padding-top: 5%;
}

.related__posts .text__container p,
.related__posts .text__container h3 {
  text-align: left;
  margin: 0;
}

.related__posts .text__container p {
  color: #999999;
}

.related__posts .text__container span {
  color: #2E2E2E;
}

.related__posts.blog {
  padding-bottom: 2.5%;
  margin-bottom: 2.5%;
}

.section__comments h3 {
  margin-bottom: 2.55%;
}

.comment {
  height: 10%;
  margin-bottom: 2%;
}

.comment .image__container {
  height: 10%;
  width: 5%;
  margin-right: 5%;
  -ms-flex-negative: 0;
      flex-shrink: 0;
}

.comment .text__container {
  background-color: #e0e0e0;
  position: relative;
}

.comment .text__container::before {
  content: "";
  width: 0;
  height: 0;
  border-top: 5px solid transparent;
  border-right: 10px solid #e0e0e0;
  border-bottom: 5px solid transparent;
  position: absolute;
  left: -10px;
  top: 10px;
}

.comment .text__container p {
  text-align: left;
  color: #333333;
  line-height: 0.75rem;
  padding: 0 2.5%;
}

.comment .text__container span,
.time {
  font-family: 'Raleway';
}

.comment .text__container .time {
  font-size: 0.4rem;
}

.blog__comment__form {
  margin-top: 5%;
}

.blog__comment__form p {
  text-align: left;
  font-style: italic;
}

.blog__form {
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.text__blog,
.email__blog {
  width: calc(94% / 3);
  padding: 1.5% 0 1.5% 1.5%;
  margin-bottom: 1%;
  border: 1px solid #e0e0e0;
}

.email__blog {
  margin: 0 calc(5% / 2) 1% calc(5% / 2);
}

.comment__blog {
  width: 100%;
  padding-bottom: 15%;
  border: 1px solid #e0e0e0;
}

.text__blog::-webkit-input-placeholder,
.email__blog::-webkit-input-placeholder,
.comment__blog::-webkit-input-placeholder {
  color: #999999;
  font-family: 'Luca';
  font-size: 0.7rem;
}

.text__blog:-ms-input-placeholder,
.email__blog:-ms-input-placeholder,
.comment__blog:-ms-input-placeholder {
  color: #999999;
  font-family: 'Luca';
  font-size: 0.7rem;
}
/* ... */

